Fixed overflow

--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@ body{
         grid-auto-rows: min-content;
         min-height: 0;
         margin-top: 10%;
-        width: 30%;
     }
     .landingPage .welcomeText{
         background-color: rgba(28, 28, 132, 0.8);
@@ -71,7 +70,7 @@ body{
         font-family: "Times New Roman";
         font-size: 20px;
         position: relative;
-        width: 20%;
+        width: 30%;
         padding-top: 5%;
         padding-left: 3%;
         padding-right: 3%;
